# sensor-regulador

./: .gitignore  README.md  docker-compose.yml
BD/: CRUD.py
ExpertSystem/: .dockerignore  Dockerfile  expert_system.py  main.py  requirements.txt
ExpertSystem/functions/: expert_system.py
MatrixInfoAggregator/: .coverage  .dockerignore  Dockerfile  README.md  __main__.py  listener.py  pyproject.toml  requirements.txt  run.sh  sender.py
MatrixInfoAggregator/connection/: listener.py  sender.py
MatrixInfoAggregator/src/: __main__.py
MatrixInfoAggregator/src/connection/: listener.py
MatrixInfoAggregator/utils/: base_client.py  clean_data.py  filter.py  joiner.py
Resources/: speech-11.17.txt
Stomp/: README.md  requirements.txt  stomp_listener.py  stomp_producer.py
Stomp/broker/: Dockerfile
Stomp/listener/: Dockerfile  __main__.py
Stomp/listener/utils/: __init__.py  filter.py  msg_listener.py
Stomp/producer/: .dockerignore  Dockerfile  __main__.py
Stomp/producer/messengers/: __init__.py  messenger_1.py  messenger_2.py
Stomp/producer/utils/: __init__.py  base_client.py  data_gen.py  msg_sender.py
Stomp/utils/: listener.py  messenger_1.py  messenger_2.py  sender.py
matrixresolver/: LICENSE.txt
matrixresolver/matrixresolver/: __about__.py  __init__.py
matrixresolver/matrixresolver/connection/: listener.py  sender.py
matrixresolver/matrixresolver/utils/: filter.py  joiner.py
messenger/src/: main.py
messenger/src/utils/: data_gen.py
