[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MatrixInfoAggregator"
description = "Un programa para recibir datos de sensores y unificarlos en un único mensaje para el broker"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }
keywords = [
    "Matrix",
    "Aggregator",
    "Filter",
    "Sensors",
    "Broker"
]
authors = [
  { name = "Bastian Soto Iturra", email = "bastian.sotoi@sansano.usm.cl" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "stomp.py"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/Scarias/sensor-regulador/tree/main/MatrixInfoAggregator#readme"
Issues = "https://github.com/Scarias/sensor-regulador/issues"
Source = "https://github.com/Scarias/sensor-regulador/tree/main/MatrixInfoAggregator"
